# data-jobs

./: README.md  analyze_jobs.ipynb  analyze_jobs.py  data-jobs.ipynb  main.py  pyproject.toml  remoteok.py
analysis/: analyzers.py  exporters.py  visualizers.py
config/: config.yaml
data/: jobicy_jobs.csv  remoteok_jobs.csv
data/outputs/: data_jobs_market_analysis.html  data_jobs_market_analysis_20250530_201759_summary.json  data_jobs_market_analysis_20250530_210112_salary_trends.csv  data_jobs_market_analysis_20250530_214501_keywords.csv  data_jobs_market_analysis_20250531_074909_keywords.csv  data_jobs_market_analysis_20250531_074909_salary_trends.csv  data_jobs_market_analysis_20250531_074909_summary.json
scraper/: __init__.py  base_scraper.py  coordinator.py  jobicy_scraper.py  remoteok_scraper.py  scrapers.py
